--- a/books/templates/register.html
+++ b/books/templates/register.html
@@ -57,7 +57,7 @@
                          <li><a href="/" class="smoothScroll">Features</a></li>
                          <li><a href="/" class="smoothScroll">About us</a></li>
                          <li><a href="/" class="smoothScroll">Booked</a></li>
-                         <li><a href="/login" class="smoothScroll">Login/Register</a></li>
+                         <li><a href="/register" class="smoothScroll">Login/Register</a></li>
                     </ul>
 
                </div>
